# mesa-wealth-demo

./: pyproject.toml
mesa_demo/: MoneyModel.py  runner.ipynb  runner.py
tests/: test_mesa_demo.py
