[tool.poetry]
name = "mesa-demo"
version = "0.1.0"
description = "A mesa demo"
authors = ["Duc Phan"]

[tool.poetry.dependencies]
python = "^3.7"
mesa = "^0.8.7"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
run = "test:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

